--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,6 @@ dependencies:
 
   flutter_riverpod: ^2.3.6
 
-  sidebarx: ^0.16.0
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -49,6 +46,9 @@ dependencies:
   cloud_firestore: ^4.8.2
   firebase_storage: ^11.2.4
   animated_custom_dropdown: ^1.5.0
+  intl: ^0.18.1
+  flutter_dotenv: ^5.1.0
+  csv: ^5.0.2
 
 dev_dependencies:
   flutter_test:
@@ -77,6 +77,7 @@ flutter:
     - assets/images/main_phone.png
     - assets/images/image_icon.png
     - assets/images/text_icon.png
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
