--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   firebase_core: ^2.14.0
   firebase_auth: ^4.6.3
-  cloud_firestore: ^4.8.2
+  cloud_firestore: ^4.8.3
   firebase_storage: ^11.2.4
   animated_custom_dropdown: ^1.5.0
   intl: ^0.18.1
@@ -54,6 +54,7 @@ dependencies:
   universal_html: ^2.2.2
   dartz: ^0.10.0
   syncfusion_flutter_charts: ^22.1.38
+  syncfusion_flutter_calendar: ^22.1.39
 
 
 dev_dependencies:
