--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   cloud_firestore: ^4.8.3
   firebase_storage: ^11.2.4
   animated_custom_dropdown: ^1.5.0
-  intl: ^0.18.1
+  intl: ^0.18.0
   flutter_dotenv: ^5.1.0
   csv: ^5.0.2
   flutter_date_range_picker: ^0.0.14
@@ -55,6 +55,11 @@ dependencies:
   dartz: ^0.10.0
   syncfusion_flutter_charts: ^22.1.38
   syncfusion_flutter_calendar: ^22.1.39
+  image_picker: ^1.0.1
+  image_picker_for_web: ^2.2.0
+  file_picker: ^5.3.1
+  flutter_date_pickers: ^0.4.2
+
 
 
 dev_dependencies:
@@ -108,6 +113,26 @@ flutter:
           weight: 400
         - asset: assets/fonts/Spoqa-Thin.otf
           weight: 300
+    - family: GmarketSans
+      fonts:
+        - asset: assets/fonts/GmarketSans-Bold.ttf
+          weight: 600
+        - asset: assets/fonts/GmarketSans-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/GmarketSans-Light.ttf
+          weight: 400
+    - family: NanumSquare
+      fonts:
+        - asset: assets/fonts/NanumSquareNeoOTF-Hv.otf
+          weight: 800
+        - asset: assets/fonts/NanumSquareNeoOTF-Eb.otf
+          weight: 700
+        - asset: assets/fonts/NanumSquareNeoOTF-Bd.otf
+          weight: 600
+        - asset: assets/fonts/NanumSquareNeoOTF-Rg.otf
+          weight: 500  
+        - asset: assets/fonts/NanumSquareNeoOTF-Lt.otf
+          weight: 400
     - family: SamlipBasic
       fonts:
         - asset: assets/fonts/Samlip-Basic.otf
