--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,11 +6,12 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
       - uses: bluefireteam/flutter-gh-pages@v7
         with:
-          baseHref: /onldocc_admin/
+          branch: gh-pages
+          folder: build/web
