--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,5 +13,4 @@ jobs:
       - uses: subosito/flutter-action@v1
       - uses: bluefireteam/flutter-gh-pages@v7
         with:
-          branch: gh-pages
-          folder: build/web
+          baseHref: /onldocc_admin
