--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: onldocc_admin
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.0-286.0.dev <4.0.0'
+  sdk: ">=3.0.0-286.0.dev <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -60,8 +60,7 @@ dependencies:
   file_picker: ^5.3.1
   flutter_date_pickers: ^0.4.2
   loading_animation_widget: ^1.2.0+4
-
-
+  flutter_animate: ^4.2.0+1
 
 dev_dependencies:
   flutter_test:
@@ -79,7 +78,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -91,6 +89,7 @@ flutter:
     - assets/images/image_icon.png
     - assets/images/text_icon.png
     - assets/images/woman_icon.png
+    - assets/app_intro/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -131,7 +130,7 @@ flutter:
         - asset: assets/fonts/NanumSquareNeoOTF-Bd.otf
           weight: 600
         - asset: assets/fonts/NanumSquareNeoOTF-Rg.otf
-          weight: 500  
+          weight: 500
         - asset: assets/fonts/NanumSquareNeoOTF-Lt.otf
           weight: 400
     - family: SamlipBasic
