--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   flutter_date_pickers: ^0.4.2
   loading_animation_widget: ^1.2.0+4
   flutter_animate: ^4.2.0+1
+  url_strategy: ^0.2.0
 
 dev_dependencies:
   flutter_test:
