--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   url_strategy: ^0.2.0
   supabase_flutter: ^2.3.0
   data_table_2: ^2.5.10
+  http: ^1.1.2
 
 dev_dependencies:
   flutter_test:
