--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   firebase_auth: ^4.16.0
   cloud_firestore: ^4.14.0
   firebase_storage: ^11.6.0
-  animated_custom_dropdown: ^1.5.0
+  animated_custom_dropdown: ^3.0.0
   intl: ^0.18.0
   flutter_dotenv: ^5.1.0
   csv: ^5.0.2
@@ -67,6 +67,8 @@ dependencies:
   http: ^1.1.2
   uuid: ^4.3.3
   cp949_codec: ^1.0.2
+  cached_network_image: ^3.3.1
+  skeletons: ^0.0.3
 
 dev_dependencies:
   flutter_test:
