--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.onldocc_admin">
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:label="onldocc_admin"
         android:name="${applicationName}"
