--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,7 +93,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - .env
+    - env
     - assets/images/
     - assets/app_intro/
     - assets/app_screen/
