--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   cp949_codec: ^1.0.2
   cached_network_image: ^3.3.1
   skeletons: ^0.0.3
+  to_csv: ^2.2.1
 
 dev_dependencies:
   flutter_test:
