행사 점수 설정

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,3 +14,6 @@ jobs:
       - uses: bluefireteam/flutter-gh-pages@v7
         with:
           baseHref: /onldocc_admin/
+        env:
+          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+          SUPABASE_ANONKEY: ${{ secrets.SUPABASE_ANONKEY }}
