--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -4,16 +4,21 @@ on:
   push:
     branches: [main]
 
+  workflow_dispatch:
+
 jobs:
   build:
     runs-on: macos-latest
-
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
       - uses: bluefireteam/flutter-gh-pages@v7
         with:
           baseHref: /onldocc_admin/
-        env:
-          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-          SUPABASE_ANONKEY: ${{ secrets.SUPABASE_ANONKEY }}
+      - name: Decode base64 secrets
+        run: |
+          echo $SUPABASE_URL | base64 -d > lib/secrets.dart
+          echo $SUPABASE_ANONKEY | base64 -d > lib/secrets.dart
+    env:
+      SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+      SUPABASE_ANONKEY: ${{ secrets.SUPABASE_ANONKEY }}
