--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,16 +9,17 @@ on:
 jobs:
   build:
     runs-on: macos-latest
-    env:
-      SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-      SUPABASE_ANONKEY: ${{ secrets.SUPABASE_ANONKEY }}
+
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
       - uses: bluefireteam/flutter-gh-pages@v7
         with:
           baseHref: /onldocc_admin/
-      - name: Write dev.json
+      - name: "Create env file"
+        env:
+          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+          SUPABASE_ANONKEY: ${{ secrets.SUPABASE_ANONKEY }}
         run: |
-          echo ${{ secrets.SUPABASE_URL }} | base64 -d > lib/secrets.dart
-          echo ${{ secrets.SUPABASE_ANONKEY }} | base64 -d > lib/secrets.dart
+          echo ${{ secrets.SUPABASE_URL }} | base64 --decode > .env
+          echo ${{ secrets.SUPABASE_ANONKEY }} | base64 --decode > .env
