--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -15,8 +15,8 @@ jobs:
       - uses: bluefireteam/flutter-gh-pages@v7
         with:
           baseHref: /onldocc_admin/
-      - run: |
-          touch .env
-          echo SUPABASE_URL=${{ secrets.SUPABASE_URL }} | base64 --decode > .env
-          echo SUPABASE_ANONKEY=${{ secrets.SUPABASE_ANONKEY }} | base64 --decode > .env
-          cat .env
+      # - run: |
+      #     touch .env
+      #     echo SUPABASE_URL=${{ secrets.SUPABASE_URL }} | base64 --decode > .env
+      #     echo SUPABASE_ANONKEY=${{ secrets.SUPABASE_ANONKEY }} | base64 --decode > .env
+      #     cat .env
