--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,7 +18,7 @@ jobs:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_ANONKEY: ${{ secrets.SUPABASE_ANONKEY }}
         run: |
-          touch assets/.env
-          echo SUPABASE_URL=${{ secrets.SUPABASE_URL }} >> assets/.env
-          echo SUPABASE_ANONKEY=${{ secrets.SUPABASE_ANONKEY }} >> assets/.env
-          cat assets/.env
+          touch .env
+          echo SUPABASE_URL=${{ secrets.SUPABASE_URL }} >> .env
+          echo SUPABASE_ANONKEY=${{ secrets.SUPABASE_ANONKEY }} >> .env
+          cat .env
