--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,6 +7,11 @@ jobs:
   build:
     runs-on: macos-latest
     steps:
+      - uses: actions/checkout@v2
+      - uses: subosito/flutter-action@v1
+      - uses: bluefireteam/flutter-gh-pages@v7
+        with:
+          baseHref: /onldocc_admin/
       - name: Create.env
         shell: bash
         env:
@@ -14,11 +19,6 @@ jobs:
           SUPABASE_ANONKEY: ${{ secrets.SUPABASE_ANONKEY }}
         run: |
           touch .env
-          echo "SUPABASE_URL=${{ secrets.SUPABASE_URL }}" >> .env
-          echo "SUPABASE_ANONKEY=${{ secrets.SUPABASE_ANONKEY }}" >> .env
+          echo SUPABASE_URL=${{ secrets.SUPABASE_URL }} > .env
+          echo SUPABASE_ANONKEY=${{ secrets.SUPABASE_ANONKEY }} > .env
           cat .env
-      - uses: actions/checkout@v2
-      - uses: subosito/flutter-action@v1
-      - uses: bluefireteam/flutter-gh-pages@v7
-        with:
-          baseHref: /onldocc_admin/
