--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,10 +94,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - env
+    # - env
     - assets/images/
     - assets/app_intro/
-
     - assets/app_screen/
 
   # An image asset can refer to one or more resolution-specific "variants", see
