--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,7 +18,7 @@ jobs:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_ANONKEY: ${{ secrets.SUPABASE_ANONKEY }}
         run: |
-          touch .env
+          touch env.json
           echo '{
             "SUPABASE_URL" : "${{ secrets.SUPABASE_URL }}",
             "SUPABASE_ANONKEY" : "${{ secrets.SUPABASE_ANONKEY }}"
