--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,9 +70,9 @@ dependencies:
   cached_network_image: ^3.3.1
   skeletons: ^0.0.3
   to_csv: ^2.2.1
-  video_thumbnail: ^0.5.3
   path_provider: ^2.1.2
   video_player: ^2.8.3
+  get_thumbnail_video: ^0.6.1
 
 dev_dependencies:
   flutter_test:
