--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,7 +70,11 @@ dependencies:
   cached_network_image: ^3.3.1
   skeletons: ^0.0.3
   to_csv: ^2.2.1
-  firebase_auth_web: ^5.8.13
+  firebase_auth_web: ^5.9.8
+  web: ^0.3.0
+
+  # dependency_overrides:
+  #   web: ^0.4.0
 
 dev_dependencies:
   flutter_test:
