--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,17 +64,14 @@ dependencies:
   url_strategy: ^0.2.0
   supabase_flutter: ^2.3.0
   data_table_2: ^2.5.10
-  http: ^1.1.2
+  http: ^1.2.1
   uuid: ^4.3.3
   cp949_codec: ^1.0.2
   cached_network_image: ^3.3.1
   skeletons: ^0.0.3
   to_csv: ^2.2.1
-  firebase_auth_web: ^5.9.8
-  web: ^0.3.0
-
-  # dependency_overrides:
-  #   web: ^0.4.0
+  # firebase_auth_web: ^5.9.8
+  # firebase_core: ^2.27.0
 
 dev_dependencies:
   flutter_test:
