--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,9 @@ dependencies:
   # firebase_auth_web: ^5.9.8
   # firebase_core: ^2.27.0
 
+dependency_overrides:
+  web: 0.4.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
