--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,8 @@ dependencies:
   path_provider: ^2.1.2
   # video_player: ^2.8.3
   get_thumbnail_video: ^0.6.1
+  dropdown_button2: ^2.3.9
+  flutter_svg: ^2.0.10+1
   # firebase_auth_web: ^5.9.8
   # firebase_core: ^2.27.0
 
@@ -106,6 +108,7 @@ flutter:
     - assets/images/
     - assets/app_intro/
     - assets/app_screen/
+    - assets/svg/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
