--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  go_router: ^9.0.2
+  go_router: ^14.2.1
 
   provider: ^6.0.5
 
@@ -41,23 +41,23 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.4.0
-  firebase_core: ^2.25.2
-  firebase_auth: ^4.10.1
-  cloud_firestore: ^4.15.8
-  firebase_storage: ^11.6.0
+  firebase_core: ^3.2.0
+  firebase_auth: ^5.1.2
+  cloud_firestore: ^5.1.0
+  firebase_storage: ^12.1.1
   animated_custom_dropdown: ^3.0.0
-  intl: ^0.18.0
+  intl: ^0.19.0
   flutter_dotenv: ^5.1.0
   csv: ^5.0.2
-  flutter_date_range_picker: ^0.0.14
+  flutter_date_range_picker: ^0.1.1
   url_launcher: ^6.0.0
   universal_html: ^2.2.4
   dartz: ^0.10.0
-  syncfusion_flutter_charts: ^22.1.38
-  syncfusion_flutter_calendar: ^22.1.39
+  syncfusion_flutter_charts: ^26.1.42
+  syncfusion_flutter_calendar: ^26.1.42
   image_picker: ^1.0.1
-  image_picker_for_web: ^2.2.0
-  file_picker: ^5.3.1
+  image_picker_for_web: ^3.0.4
+  file_picker: ^8.0.6
   flutter_date_pickers: ^0.4.2
   loading_animation_widget: ^1.2.0+4
   flutter_animate: ^4.2.0+1
@@ -68,18 +68,21 @@ dependencies:
   uuid: ^4.3.3
   cp949_codec: ^1.0.2
   cached_network_image: ^3.3.1
-  skeletons: ^0.0.3
-  to_csv: ^2.2.1
+  # skeletons: ^0.0.3
+  to_csv: ^3.0.1
   path_provider: ^2.1.2
   # video_player: ^2.8.3
   get_thumbnail_video: ^0.6.1
   dropdown_button2: ^2.3.9
   flutter_svg: ^2.0.10+1
+  flutter_skeleton_ui: ^0.0.6
+  syncfusion_flutter_datepicker: ^26.2.5
+  flutter_localization: ^0.2.0
   # firebase_auth_web: ^5.9.8
   # firebase_core: ^2.27.0
 
 dependency_overrides:
-  web: 0.4.0
+  # web: 0.4.0
 
 dev_dependencies:
   flutter_test:
@@ -106,7 +109,6 @@ flutter:
   assets:
     - env
     - assets/images/
-    - assets/app_intro/
     - assets/app_screen/
     - assets/svg/
 
@@ -122,42 +124,16 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: Spoqa
+    - family: Pretendard
       fonts:
-        - asset: assets/fonts/Spoqa-Bold.otf
-          weight: 600
-        - asset: assets/fonts/Spoqa-Medium.otf
-          weight: 500
-        - asset: assets/fonts/Spoqa-Light.otf
-          weight: 400
-        - asset: assets/fonts/Spoqa-Thin.otf
-          weight: 300
-    - family: GmarketSans
-      fonts:
-        - asset: assets/fonts/GmarketSans-Bold.ttf
-          weight: 600
-        - asset: assets/fonts/GmarketSans-Medium.ttf
-          weight: 500
-        - asset: assets/fonts/GmarketSans-Light.ttf
-          weight: 400
-    - family: NanumSquare
-      fonts:
-        - asset: assets/fonts/NanumSquareNeoOTF-Hv.otf
-          weight: 800
-        - asset: assets/fonts/NanumSquareNeoOTF-Eb.otf
+        - asset: assets/fonts/Pretendard-Bold.otf
           weight: 700
-        - asset: assets/fonts/NanumSquareNeoOTF-Bd.otf
+        - asset: assets/fonts/Pretendard-SemiBold.otf
           weight: 600
-        - asset: assets/fonts/NanumSquareNeoOTF-Rg.otf
+        - asset: assets/fonts/Pretendard-Medium.otf
           weight: 500
-        - asset: assets/fonts/NanumSquareNeoOTF-Lt.otf
+        - asset: assets/fonts/Pretendard-Regular.otf
           weight: 400
-    - family: SamlipBasic
-      fonts:
-        - asset: assets/fonts/Samlip-Basic.otf
-    - family: SamlipOutline
-      fonts:
-        - asset: assets/fonts/Samlip-Outline.otf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
