--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_localizations:
+    sdk: flutter
+
   go_router: ^14.2.1
 
   provider: ^6.0.5
@@ -77,7 +80,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   flutter_skeleton_ui: ^0.0.6
   syncfusion_flutter_datepicker: ^26.2.5
-  flutter_localization: ^0.2.0
+  flutter_localization: ^0.2.1
   # firebase_auth_web: ^5.9.8
   # firebase_core: ^2.27.0
 
