--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -111,6 +111,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - env
+    - assets/notice/
     - assets/images/
     - assets/app_screen/
     - assets/svg/
