--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,7 @@ dependencies:
   syncfusion_flutter_datepicker: ^26.2.5
   flutter_localization: ^0.2.1
   excel: ^4.0.3
+  flutter_multi_formatter: ^2.13.0
   # firebase_auth_web: ^5.9.8
   # firebase_core: ^2.27.0
 
