--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,8 +56,12 @@ dependencies:
   url_launcher: ^6.0.0
   universal_html: ^2.2.4
   dartz: ^0.10.0
-  syncfusion_flutter_charts: ^26.2.9
-  syncfusion_flutter_calendar: ^26.2.9
+  syncfusion_flutter_charts:
+    git:
+      url: https://github.com/Luvti/flutter-widgets
+      path: packages/syncfusion_flutter_charts
+      ref: 15e3c4a95e3cf2e2393755bf5aa11c0206ed6dea
+  syncfusion_flutter_calendar: ^26.1.42
   image_picker: ^1.0.1
   image_picker_for_web: ^3.0.4
   file_picker: ^8.0.6
