--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -11,17 +11,13 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           flutter-version: "3.22.2"
+
+      - name: Generate env file
+        run: |
+          touch env
+          echo "SUPABASE_ANONKEY=${{ secrets.SUPABASE_ANONKEY }}" >> env
+          echo "SUPABASE_URL=${{ secrets.SUPABASE_URL }}" >> env
+
       - uses: bluefireteam/flutter-gh-pages@v7
         with:
           baseHref: /onldocc_admin/
-      - name: Create.env
-        shell: bash
-        env:
-          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-          SUPABASE_ANONKEY: ${{ secrets.SUPABASE_ANONKEY }}
-        run: |
-          touch env.json
-          echo '{
-            "SUPABASE_URL" : "${{ secrets.SUPABASE_URL }}",
-            "SUPABASE_ANONKEY" : "${{ secrets.SUPABASE_ANONKEY }}"
-          }' > env.json
