--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,7 @@ dependencies:
   flutter_localization: ^0.2.1
   excel: ^4.0.3
   flutter_multi_formatter: ^2.13.0
+  pdf: ^3.11.1
   # firebase_auth_web: ^5.9.8
   # firebase_core: ^2.27.0
 
