--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -115,7 +115,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - env
+    - .env
     - assets/notice/
     - assets/images/
     - assets/app_screen/
