--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -120,6 +120,7 @@ flutter:
     - assets/images/
     - assets/app_screen/
     - assets/svg/
+    - assets/menu_svg/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
