건강이야기 영상

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,6 +89,8 @@ dependencies:
   flutter_quill: ^11.4.1
   flutter_quill_extensions: ^11.0.0
   youtube_player_iframe: ^5.2.1
+  youtube_player_flutter: ^9.1.1
+  video_player: ^2.10.0
 
   # firebase_auth_web: ^5.9.8
   # firebase_core: ^2.27.0
