--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,6 +17,19 @@ jobs:
           touch env
           echo "SUPABASE_ANONKEY=${{ secrets.SUPABASE_ANONKEY }}" >> env
           echo "SUPABASE_URL=${{ secrets.SUPABASE_URL }}" >> env
+          echo "CHATGPT_API_KEY=${{ secrets.CHATGPT_API_KEY }}" >> env
+          echo "CHATGPT_ORG_ID=${{ secrets.CHATGPT_ORG_ID }}" >> env
+          echo "GOOGLE_API_SERVICE_TYPE=${{ secrets.GOOGLE_API_SERVICE_TYPE }}" >> env
+          echo "GOOGLE_API_SERVICE_PROJECT_ID=${{ secrets.GOOGLE_API_SERVICE_PROJECT_ID }}" >> env
+          echo "GOOGLE_API_SERVICE_PRIVATE_KEY_ID=${{ secrets.GOOGLE_API_SERVICE_PRIVATE_KEY_ID }}" >> env
+          echo "GOOGLE_API_SERVICE_PRIVATE_KEY=${{ secrets.GOOGLE_API_SERVICE_PRIVATE_KEY }}" >> env
+          echo "GOOGLE_API_SERVICE_CLIENT_EMAIL=${{ secrets.GOOGLE_API_SERVICE_CLIENT_EMAIL }}" >> env
+          echo "GOOGLE_API_SERVICE_CLIENT_ID=${{ secrets.GOOGLE_API_SERVICE_CLIENT_ID }}" >> env
+          echo "GOOGLE_API_SERVICE_AUTH_URI=${{ secrets.GOOGLE_API_SERVICE_AUTH_URI }}" >> env
+          echo "GOOGLE_API_SERVICE_TOKEN_URI=${{ secrets.GOOGLE_API_SERVICE_TOKEN_URI }}" >> env
+          echo "GOOGLE_API_SERVICE_AUTH_PROVIDER_X509_CERT_URL=${{ secrets.GOOGLE_API_SERVICE_AUTH_PROVIDER_X509_CERT_URL }}" >> env
+          echo "GOOGLE_API_SERVICE_CLIENT_X509_CERT_URL=${{ secrets.GOOGLE_API_SERVICE_CLIENT_X509_CERT_URL }}" >> env
+          echo "GOOGLE_API_SERVICE_UNIVERSE_DOMAIN=${{ secrets.GOOGLE_API_SERVICE_UNIVERSE_DOMAIN }}" >> env
 
       - uses: bluefireteam/flutter-gh-pages@v7
         with:
