--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -3,14 +3,23 @@ name: gh-pages
 on:
   push:
     branches: [main]
+
+permissions:
+  contents: write
+
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: subosito/flutter-action@v1
+      - uses: actions/checkout@v4
+      - uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.22.2"
+          flutter-version: "3.32.6"
+          channel: "stable"
+          cache: true
+
+      - name: flutter --version
+        run: flutter --version
 
       - name: Generate env file
         run: |
